Pushed stylistic changes + squashed bugs regarding transitions

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@ body {
     overflow: hidden;
     margin: 0;
     font-size: 14px;
-    font-family: "Helvetica Neue", Helvetica;
+    font-family: "Arial", Helvetica;
+    background: black;
+
 }
 
 #chart {
